@@ -26,8 +26,8 @@ sub doInventory {
     my $routes = getRoutingTable(logger => $logger);
     my $default = $routes->{'0.0.0.0'};
 
-    my @interfaces = _getInterfaces(logger => $logger);
-    foreach my $interface (@interfaces) {
+    my $interfaces = _getInterfaces(logger => $logger);
+    foreach my $interface (@{$interfaces}) {
         # if the default gateway address and the interface address belongs to
         # the same network, that's the gateway for this network
         $interface->{IPGATEWAY} = $default if isSameNetwork(
@@ -48,38 +48,76 @@ sub doInventory {
 sub _getInterfaces {
     my (%params) = @_;
 
-    my @interfaces = _parseIfconfig(
-        command => '/sbin/ifconfig -a',
-        logger  =>  $params{logger}
+    my $interfaces = _parseIfconfig(
+        command     => '/sbin/ifconfig -a',
+        netsetup    => _parseNetworkSetup(%params),
+        %params
     );
 
-    foreach my $interface (@interfaces) {
+    foreach my $interface (@{$interfaces}) {
+        next unless $interface->{IPADDRESS} && $interface->{IPMASK};
         $interface->{IPSUBNET} = getSubnetAddress(
             $interface->{IPADDRESS},
             $interface->{IPMASK}
         );
     }
 
-    return @interfaces;
+    return $interfaces;
+}
+
+sub _parseNetworkSetup {
+    my (%params) = @_;
+
+    # Can be provided by unittest
+    return $params{netsetup} if $params{netsetup};
+
+    my @lines = getAllLines(
+        command => 'networksetup -listallhardwareports',
+        %params
+    );
+    return unless @lines;
+
+    my $netsetup;
+    my $interface;
+
+    foreach my $line (@lines) {
+        if ($line =~ /^Hardware Port: (.+)$/) {
+            $interface = {
+                description => $1
+            };
+        } elsif ($line =~ /^Device: (.+)$/) {
+            $netsetup->{$1} = $interface;
+        } elsif ($line =~ /^Ethernet Address: (.+)$/) {
+            $interface->{macaddr} = $1;
+        } elsif ($line =~ /^VLAN Configurations/) {
+            last;
+        }
+    }
+
+    return $netsetup;
 }
 
 sub _parseIfconfig {
+    my (%params) = @_;
 
-    my $handle = getFileHandle(@_);
-    return unless $handle;
+    my @lines = getAllLines(%params)
+        or return;
 
+    my $netsetup = $params{netsetup} || {};
     my @interfaces;
     my $interface;
 
-    while (my $line = <$handle>) {
+    foreach my $line (@lines) {
         if ($line =~ /^(\S+):/) {
             # new interface
             push @interfaces, $interface if $interface;
             $interface = {
                 STATUS      => 'Down',
-                DESCRIPTION => $1,
-                VIRTUALDEV  => 1
+                DESCRIPTION => $netsetup->{$1} ? $netsetup->{$1}->{description} : $1,
+                VIRTUALDEV  => $netsetup->{$1} ? 0 : 1
             };
+            $interface->{MACADDR} = $netsetup->{$1}->{macaddr}
+                if $netsetup->{$1} && $netsetup->{$1}->{macaddr};
         }
 
         if ($line =~ /inet ($ip_address_pattern)/) {
@@ -104,6 +142,9 @@ sub _parseIfconfig {
         if ($line =~ /media (\S+)/) {
             $interface->{TYPE} = $1;
         }
+        if ($line =~ /media: \S+ \((\d+)baseTX <.*>\)/) {
+            $interface->{SPEED} = $1;
+        }
         if ($line =~ /status:\s+active/i) {
             $interface->{STATUS} = 'Up';
         }
@@ -111,12 +152,11 @@ sub _parseIfconfig {
             $interface->{VIRTUALDEV} = 0;
         }
     }
-    close $handle;
 
     # last interface
     push @interfaces, $interface if $interface;
 
-    return @interfaces;
+    return \@interfaces;
 }
 
 1;
