@@ -59,6 +59,7 @@ inventory:
 * linux: added process to enhance storage support testing
 * fix #769: fix Virtuozzo virtualization inventory
 * fix #752: normalize video cards memory on macosx
+* fix #452, #642: better macosx network cards support
 * Updated pci.ids to 2019.11.10 version
 * Updated usb.ids to 2019.11.05 version
 
